--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     
 </head>
 <body>
+    <h1>TicTacToe Game</h1>
+    <div class="container">
+        <div class="game">
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+        </div>
+    </div>
+    <button id="resetBtn">Reset Game</button>
     <script src=app.js></script>
 </body>
 </html>
