--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     
 </head>
 <body>
+    <div class="msg-container hide">
+        <p id="msg"></p>
+        <button id="newGameBtn">New Game</button>
+    </div>
     <h1>TicTacToe Game</h1>
+    
     <div class="container">
         <div class="game">
             <button class="box"></button>
